# projecto-final-anthony-y-asociados

./: CMakeLists.txt  README.md  neural_network.h  nn_dense.h  nn_loss.h  nn_optimizer.h  tensor.h
docs/: README.md
include/utec/agent/: EnvGym.h  PongAgent.h
include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h  nn_dense.h  nn_optimizer.h  optimizer.h
include/utec/threading/: ThreadPool.h
src/: activation.h  main.cpp  nn_interfaces.h  tensor.h
src/bench/: bench_seq.cpp  bench_thread.cpp
src/utec/agent/: EnvGym.cpp  PongAgent.cpp
src/utec/threading/: ThreadPool.cpp
tests/: test_agent_env.cpp  test_neural_network.cpp  test_tensor.cpp
